# nonebot_plugin_send_message

./: .env.dev  .env.prod  README.md  pyproject.toml  setup.py
nonebot_plugin_send_message/: __init__.py  config.py
